--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css" 
+         ],
             "scripts": []
           },
           "configurations": {
@@ -87,12 +88,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ce20e403-be6c-470f-9329-fb77bb778598"
   }
 }
